css/projects: fix feature images on small screens

--- a/css/projects.scss
+++ b/css/projects.scss
@@ -34,6 +34,12 @@
 		}
 	}
 
+	@media (max-width: 768px) {
+		.row .col-md-3 {
+			min-height: 200px;
+		}
+	}
+
 	.project-name {
 		font-size: 1.75rem;
 	}
